--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.1",
     "figlet": "^1.5.2",
     "inquirer": "^8.0.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
     "require": "^2.4.20"
