added more functions, fixed schemas

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "sequelize": "^6.21.4"
   }
 }
